Fixed gap

--- a/css/index.css
+++ b/css/index.css
@@ -613,6 +613,7 @@ input[type="text"], input[type="tel"], input[type="email"] {
     background-color: #F9F4F0;  
     padding: auto;
     margin: auto;
+    margin-top: 30%;
 }
 
 .statistics-header{
